# fractal_visualizer

./: CMakeLists.txt  README.md  Shader.cpp  Shader.h  main.cpp  makefile  shader.frag
src/: fractal_utils.cpp  fractal_utils.hpp  main.cpp
src/shaders/: shader copy.comp  shader.comp  shader.frag
